[package]
name = "epub-tools"
version = "0.1.0"
edition = "2021"
description = "Inspect, extract, and edit EPUB files from the command line"
license = "MIT"
readme = "README.md"
repository = ""
keywords = ["epub", "ebook", "cli", "metadata"]
categories = ["command-line-utilities"]

[[bin]]
name = "epub-tools"
path = "src/main.rs"

[lib]
name = "epub_tools"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
